versions/v2.8/modules/en/pages/cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
= Setting up Clusters from Hosted Kubernetes Providers
:revdate: 2024-09-26
:page-revdate: {revdate}

In this scenario, Rancher does not provision Kubernetes because it is installed by providers such as Google Kubernetes Engine (GKE), Amazon Elastic Container Service for Kubernetes, or Azure Kubernetes Service.

If you use a Kubernetes provider such as Google GKE, Rancher integrates with its cloud APIs, allowing you to create and manage role-based access control for the hosted cluster from the Rancher UI.

In this use case, Rancher sends a request to a hosted provider using the provider's API. The provider then provisions and hosts the cluster for you. When the cluster finishes building, you can manage it from the Rancher UI along with clusters you've provisioned that are hosted on-prem or in an infrastructure provider.

Rancher supports the following Kubernetes providers:

* https://cloud.google.com/kubernetes-engine/[Google GKE (Google Kubernetes Engine)]
* https://aws.amazon.com/eks/[Amazon EKS (Amazon Elastic Container Service for Kubernetes)]
* https://azure.microsoft.com/en-us/services/kubernetes-service/[Microsoft AKS (Azure Kubernetes Service)]
* https://www.alibabacloud.com/product/kubernetes[Alibaba ACK (Alibaba Cloud Container Service for Kubernetes)]
* https://intl.cloud.tencent.com/product/tke[Tencent TKE (Tencent Kubernetes Engine)]
* https://www.huaweicloud.com/en-us/product/cce.html[Huawei CCE (Huawei Cloud Container Engine)]

== Hosted Kubernetes Provider Authentication

When using Rancher to create a cluster hosted by a provider, you are prompted for authentication information. This information is required to access the provider's API. For more information on how to obtain this information, see the following procedures:

* xref:cluster-deployment/hosted-kubernetes/gke/gke.adoc[Creating a GKE Cluster]
* xref:cluster-deployment/hosted-kubernetes/eks/eks.adoc[Creating an EKS Cluster]
* xref:cluster-deployment/hosted-kubernetes/aks/aks.adoc[Creating an AKS Cluster]
* xref:[Creating an ACK Cluster]
* xref:[Creating a TKE Cluster]
* xref:[Creating a CCE Cluster]
