versions/v2.11/modules/en/pages/cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
= Setting up Clusters from Hosted Kubernetes Providers
:page-languages: [en, zh]
:revdate: 2025-03-12
:page-revdate: {revdate}
:page-community-path: how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/index.adoc 
:page-product-path: cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc
ifeval::["{build-type}" != "community"]
:xref-deploy-gke: xref:cluster-deployment/hosted-kubernetes/gke/gke.adoc
:xref-deploy-eks: xref:cluster-deployment/hosted-kubernetes/eks/eks.adoc
:xref-deploy-aks: xref:cluster-deployment/hosted-kubernetes/aks/aks.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-deploy-gke: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/gke.adoc
:xref-deploy-eks: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/eks.adoc
:xref-deploy-aks: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-clusters-from-hosted-kubernetes-providers/aks.adoc
endif::[]

In this scenario, Rancher does not provision Kubernetes because it is installed by providers such as Google Kubernetes Engine (GKE), Amazon Elastic Container Service for Kubernetes, or Azure Kubernetes Service.

If you use a Kubernetes provider such as Google GKE, Rancher integrates with its cloud APIs, allowing you to create and manage role-based access control for the hosted cluster from the Rancher UI.

In this use case, Rancher sends a request to a hosted provider using the provider's API. The provider then provisions and hosts the cluster for you. When the cluster finishes building, you can manage it from the Rancher UI along with clusters you've provisioned that are hosted on-prem or in an infrastructure provider.

Rancher supports the following Kubernetes providers:

* https://cloud.google.com/kubernetes-engine/[Google GKE (Google Kubernetes Engine)]
* https://aws.amazon.com/eks/[Amazon EKS (Amazon Elastic Container Service for Kubernetes)]
* https://azure.microsoft.com/en-us/services/kubernetes-service/[Microsoft AKS (Azure Kubernetes Service)]

== Hosted Kubernetes Provider Authentication

When using Rancher to create a cluster hosted by a provider, you are prompted for authentication information. This information is required to access the provider's API. For more information on how to obtain this information, see the following procedures:

* {xref-deploy-gke}[Creating a GKE Cluster]
* {xref-deploy-eks}[Creating an EKS Cluster]
* {xref-deploy-aks}[Creating an AKS Cluster]
